--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
+    "react-use": "^17.4.0",
     "use-asset": "^1.0.4"
   },
   "devDependencies": {
