--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
     "react-use": "^17.4.0",
-    "use-asset": "^1.0.4"
+    "use-asset": "^1.0.4",
+    "zustand": "^4.3.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
