--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@fontsource/inter": "^4.5.15",
+    "@fontsource/space-grotesk": "^4.5.13",
+    "@react-spring/web": "^9.7.1",
     "leva": "^0.9.34",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
