--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
   "dependencies": {
     "@fontsource/inter": "^4.5.15",
     "@fontsource/space-grotesk": "^4.5.13",
+    "@react-spring/three": "^9.7.1",
     "@react-spring/web": "^9.7.1",
+    "@react-three/drei": "^9.57.2",
+    "@react-three/fiber": "^8.12.0",
+    "@types/three": "^0.149.0",
     "leva": "^0.9.34",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
     "react-use": "^17.4.0",
+    "three": "^0.150.1",
     "use-asset": "^1.0.4",
     "zustand": "^4.3.6"
   },
