--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.8.0",
     "react-use": "^17.4.0",
     "three": "^0.150.1",
+    "three-stdlib": "^2.21.8",
     "use-asset": "^1.0.4",
     "zustand": "^4.3.6"
   },
