--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@react-spring/web": "^9.7.1",
     "@react-three/drei": "^9.57.2",
     "@react-three/fiber": "^8.12.0",
+    "@react-three/postprocessing": "^2.7.1",
     "@types/three": "^0.149.0",
     "leva": "^0.9.34",
+    "nanoid": "^4.0.1",
+    "postprocessing": "^6.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
