--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-three/postprocessing": "^2.7.1",
     "@types/three": "^0.149.0",
     "leva": "^0.9.34",
+    "meshline": "^3.1.6",
     "nanoid": "^4.0.1",
     "postprocessing": "^6.30.1",
     "react": "^18.2.0",
