--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "find-deadcode": "ts-prune"
   },
   "dependencies": {
     "@fontsource/inter": "^4.5.15",
@@ -17,6 +18,7 @@
     "@react-three/fiber": "^8.12.0",
     "@react-three/postprocessing": "^2.7.1",
     "@types/three": "^0.149.0",
+    "glsl-noise": "^0.0.0",
     "leva": "^0.9.34",
     "meshline": "^3.1.6",
     "nanoid": "^4.0.1",
@@ -37,6 +39,8 @@
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4",
+    "terser": "^5.16.8",
+    "ts-prune": "^0.10.3",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
