--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@react-three/fiber": "^8.12.0",
     "@react-three/postprocessing": "^2.7.1",
     "@types/three": "^0.149.0",
+    "glsl-dither": "^1.0.1",
+    "glsl-luma": "^1.0.1",
     "glsl-noise": "^0.0.0",
+    "glslify": "^7.1.1",
     "leva": "^0.9.34",
     "meshline": "^3.1.6",
     "nanoid": "^4.0.1",
@@ -42,6 +45,8 @@
     "terser": "^5.16.8",
     "ts-prune": "^0.10.3",
     "typescript": "^4.9.3",
-    "vite": "^4.1.0"
+    "vite": "^4.1.0",
+    "vite-plugin-glsl": "^1.1.2",
+    "vite-plugin-glslify": "^2.0.1"
   }
 }
