--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
     "react-use": "^17.4.0",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1",
     "three": "^0.150.1",
     "three-stdlib": "^2.21.8",
     "use-asset": "^1.0.4",
