--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "find-deadcode": "ts-prune"
+    "find-deadcode": "ts-prune",
+    "tsc": "tsc"
   },
   "dependencies": {
     "@fontsource/inter": "^4.5.15",
